<resources>
    <string name="app_name" translatable="false">JustCoffee</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="place_your_order">Place Your Order</string>
    <string name="checkyourorder">Please, check your order</string>
    <string name="checkyourorderagain">Please, check your order</string>
    <string name="coffeeorder">Coffee Order for  </string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="name1">Name:</string>
    <string name="whippedcream">Add Whipped Cream:</string>
    <string name="chocolatetopping">Add Chocolate:</string>
</resources>
