<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/coffeebeansframe"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="34dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#795548"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/notify_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/notify_me_checkbox_chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"

                android:onClick="decriment"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="0"

                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>


        <Button
            android:id="@+id/sendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:onClick="sendEmail"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/place_your_order" />


        <ImageView
            android:id="@+id/coffeeneed"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:src="@drawable/coffeecomp" />

    </LinearLayout>
</ScrollView>
